[tool.poetry]
name = "xi.auth"
version = "0.1.0"
description = "Backend for user-related services"
authors = ["niqzart", "xi.team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.18"}
psycopg2-binary = "^2.9.6"
pydantic-marshals = {version = "0.3.5", extras = ["sqlalchemy"]}
aenum = "^3.1.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "4.0.1"
black = "^23.1.0"
pre-commit = "^3.2.1"
mypy = "^1.1.1"
flake8-pie = "0.16.0"
dlint = "0.14.0"
flake8-coding = "1.3.2"
flake8-secure-coding-standard = "1.4.0"
flake8-unused-arguments = "0.0.13"
flake8-pytest-style = "1.7.2"
flake8-useless-assert = "0.4.4"
flake8-simplify = "0.19.3"
flake8-future-import = "0.4.7"
flake8-functions-names = "0.4.0"
flake8-variables-names = "0.0.5"
flake8-comments = "0.1.2"
flake8-annotations = "2.9.1"
flake8-new-union-types = "0.4.1"
flake8-pep585 = "0.1.7"
flake8-type-checking = "2.3.1"
flake8-print = "5.0.0"
flake8-use-fstring = "1.4"
flake8-use-pathlib = "0.3.0"
flake8-test-name = "^0.1.5"
wemake-python-styleguide = "^0.17.0"
aiosqlite = "^0.19.0"
types-passlib = "^1.7.7.13"
pydantic-marshals = {extras = ["assert-contains"], version = "^0.3.5"}
faker = "^19.6.2"
httpx = "^0.25.0"
freezegun = "^1.2.2"

[tool.isort]
profile = "black"
py_version = 311
combine_as_imports = true
known_first_party = ["app", "tests"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
line_length = 88

[tool.mypy]
plugins = "pydantic_marshals.mypy.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
